MediaWiki theme: Fix wrong colored `box-shadow` on ToggleSwitchWidget
Fixing a small visual glitch, `box-shadow` on ToggleSwitchWidget
should be progressive active blue and not progressive when
in `:active` and `:active:focus` state.

--- a/src/themes/mediawiki/common.less
+++ b/src/themes/mediawiki/common.less
@@ -91,6 +91,7 @@
 
 @box-shadow-dialog: 0 0.15em 0 0 rgba( 0, 0, 0, 0.15 );
 @box-shadow-menu: @box-shadow-dialog;
+@box-shadow-active: inset 0 0 0 1px @color-progressive-active;
 @box-shadow-focus-default: inset 0 0 0 1px @color-progressive;
 @box-shadow-focus-inset: inset 0 0 0 1px @color-progressive, inset 0 0 0 2px @color-default-light;
 @box-shadow-focus-readonly: inset 0 0 0 1px #c8ccd1;
